# mind-alcove-dev-python

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: dev.yml
app/: main.py
app/ai/: models.py
app/ai/prompts/: affirmation.py  insight_advice.py
app/ai/prompts/activity_suggeston/: reconcile_patterns.py  select_activities.py
app/ai/prompts/journal/: daily_prompt.py  suggestion.py
app/ai/structured_outputs/: affirmation.py  insight_advice.py  journal.py
app/ai/structured_outputs/activity_suggestion/: reconcile_patterns.py  select_activities.py
app/ai/structured_outputs/journal/: daily_prompt.py
app/api/: router.py
app/api/routes/: activity_suggestion.py  affirmation.py  health.py  insight_advice.py  journal.py
app/api/schemas/: activity_suggestion.py  affirmation.py  health.py  insight_advice.py  journal.py
app/cache/: factory.py  interface.py  memory_impl.py  redis_impl.py
app/core/: config.py  context.py  dependencies.py  exception_handlers.py  exceptions.py  logging.py  middlewares.py  responses.py  util.py
app/db/: session.py
app/db/models/: acvtivity_ai_logs.py  genders.py  journal.py  llm_calls.py  users.py
app/services/: affirmation.py  insight_advice.py  journal.py  llm_calls_trace.py
app/services/activity_suggestion/: graph.py  main_service.py  process_inputs.py  select_activities.py  state.py
app/services/activity_suggestion/nodes/: activity_list.py  daily_prompt.py  process_inputs.py  reconcile_patterns.py  select_activities.py  verify_routine.py
