[project]
name = "mind_alcove_ai_service"
version = "0.1.0"
description = "FastAPI powered AI service for mind alcove. This project uses fastapi, langchain, google gemini etc."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.2.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
