[project]
name = "mind_alcove_ai_service"
version = "0.1.0"
description = "FastAPI powered AI service for mind alcove. This project uses fastapi, langchain, google gemini etc."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi>=0.128.0",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "ipython>=9.10.0",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "redis[hiredis]>=7.2.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
